--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                                 Browsermu tidak mendukung tag ini, upgrade donk!
                             </video>
                             <div class="text-home">
-                                <small class="animate-scale" style="text-shadow: 5px 5px 2px #346240; font-size: 3rem; font-weight: 600;">Syukuran Pernikahan</small>
+                                <small class="animate-scale" style="text-shadow: 5px 5px 2px #346240; font-size: 2rem; font-weight: 600;">Syukuran Pernikahan</small>
                                 <div>
                                     <span class="animate-scale" style="text-shadow: 4px 4px 2px #346240">Zalza</span>
                                     <span class="animate-scale" style="text-shadow: 4px 4px 2px #346240">&</span>
@@ -194,7 +194,7 @@
                                             <div class="cp-time">
                                                 <div class="cp-time-akad">
                                                     <div style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
-                                                        <span>Akad</span>
+                                                        <span>Akad Nikah</span>
                                                         <span>08.00 (KUA)</span>
                                                     </div>
                                                 </div>
@@ -282,7 +282,7 @@
                     </section> -->
         
                     <section id="rsvp" class="rsvp" style="margin-bottom: 0%">
-                        <h2 class="section-title scroll-animate" style="margin-bottom: 0%; font-size: 55px;">Ucapan</h2>
+                        <h2 class="section-title scroll-animate" style="margin-bottom: 0%;">Ucapan</h2>
                         <div class="quote-text text-center scroll-animate">
                             Ucapan Selamat, Doa & Konfirmasi Kehadiran
                         </div>
