--- a/index.html
+++ b/index.html
@@ -238,12 +238,12 @@
                             <!-- <img class="animate-scale" src="images/prewed/1000149741.jpg" alt="Pasangan 3" /> -->
                             <img class="animate-scale" src="images/prewed/1000149807.jpg" alt="Pasangan 4" />
                             <img class="animate-scale" src="images/prewed/1000149774.jpg" alt="Pasangan 8" />
-                            <img class="animate-scale" src="images/prewed/_MG_2142.JPG" alt="Pasangan 5" />
+                            <!-- <img class="animate-scale" src="images/prewed/_MG_2142.JPG" alt="Pasangan 5" /> -->
                             <!-- Kolom 2 -->
                             <img class="animate-scale" src="images/prewed/1000149751.jpg" alt="Pasangan 9" />   
                             <img class="animate-scale" src="images/prewed/1000149734.jpg" alt="Pasangan 2" />
                             <img class="animate-scale" src="images/prewed/1000149797.jpg" alt="Pasangan 1" />
-                            <img class="animate-scale" src="images/prewed/1000149786.jpg" alt="Pasangan 6" />
+                            <!-- <img class="animate-scale" src="images/prewed/1000149786.jpg" alt="Pasangan 6" /> -->
                             <img class="animate-scale" src="images/prewed/1000149724.jpg" alt="Pasangan 7" />
                         </div>
                     </section>
